# Insurance_Management_System

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
database/: userdatabase.cpp  userdatabase.h
dialogs/: carinsurancedialog.cpp  carinsurancedialog.h  signupdialog.cpp  signupdialog.h  signupdialog.ui  travelinsurancedialog.cpp  travelinsurancedialog.h
models/: insurance_application.cpp  insurance_application.h  person.cpp  person.h
widgets/: loginwindow.cpp  loginwindow.h  loginwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  widget.h
